--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Mood Story</string>
+    <string name="chart_bubble_label">Mood level</string>
+    <string name="chart_line_label">Avg by last 3 value</string>
+    <string name="chart_description">Your mood story</string>
 </resources>
